--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 保加利亚-437.2KB/s(Youtube:不良林), server: 213.183.63.218, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
-  - {name: 🇺🇸 美国-3.58MB/s(Youtube:不良林), server: 38.75.136.21, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 波兰-160.9KB/s(Youtube:不良林), server: 217.30.10.66, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇺🇸 美国-2.67MB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇳🇱 荷兰-1.83MB/s(Youtube:不良林), server: 213.183.59.185, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 波兰-1.82MB/s(Youtube:不良林), server: 217.30.10.65, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
-  - {name: 波兰-1.67MB/s(Youtube:不良林), server: 217.30.10.65, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 波兰-706.9KB/s(Youtube:不良林), server: 217.30.10.65, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 波兰-1.01MB/s(Youtube:不良林), server: 217.30.10.65, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 波兰-914.9KB/s(Youtube:不良林), server: 217.30.10.68, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 🇺🇸 美国-790.1KB/s(Youtube:不良林), server: hk22.swty.buzz, port: 12155, type: vmess, uuid: e152429a-8e95-4f53-bb88-e92a62682fcf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk22.swty.buzz}}
+  - {name: 🇺🇸 美国-2.67MB/s(Youtube:不良林), server: 38.114.114.67, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 保加利亚-324.4KB/s(Youtube:不良林), server: 213.183.63.218, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-2.15MB/s(Youtube:不良林), server: 38.86.135.36, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-904.6KB/s(Youtube:不良林), server: 192.210.206.50, port: 11188, type: vmess, uuid: de0ff7f6-370e-41c9-c24a-b932c7c1ad58, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 192.210.206.50}}
+  - {name: 🇺🇸 美国-6.01MB/s(Youtube:不良林), server: hk45.swty.club, port: 12155, type: vmess, uuid: e152429a-8e95-4f53-bb88-e92a62682fcf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk45.swty.club}}
+  - {name: 🇺🇸 美国-4.43MB/s(Youtube:不良林), server: 51.81.223.15, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-416.5KB/s(Youtube:不良林), server: 51.81.223.18, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-610.4KB/s(Youtube:不良林), server: 51.81.223.4, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-437.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 波兰-160.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-790.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
-      - 波兰-1.82MB/s(Youtube:不良林)
-      - 波兰-1.67MB/s(Youtube:不良林)
-      - 波兰-706.9KB/s(Youtube:不良林)
-      - 波兰-1.01MB/s(Youtube:不良林)
-      - 波兰-914.9KB/s(Youtube:不良林)
+      - 保加利亚-324.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-904.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-416.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-610.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 保加利亚-437.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 波兰-160.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-790.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
-      - 波兰-1.82MB/s(Youtube:不良林)
-      - 波兰-1.67MB/s(Youtube:不良林)
-      - 波兰-706.9KB/s(Youtube:不良林)
-      - 波兰-1.01MB/s(Youtube:不良林)
-      - 波兰-914.9KB/s(Youtube:不良林)
+      - 保加利亚-324.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-904.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-416.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-610.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-437.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 波兰-160.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-790.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
-      - 波兰-1.82MB/s(Youtube:不良林)
-      - 波兰-1.67MB/s(Youtube:不良林)
-      - 波兰-706.9KB/s(Youtube:不良林)
-      - 波兰-1.01MB/s(Youtube:不良林)
-      - 波兰-914.9KB/s(Youtube:不良林)
+      - 保加利亚-324.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-904.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-416.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-610.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 保加利亚-437.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 波兰-160.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-790.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
-      - 波兰-1.82MB/s(Youtube:不良林)
-      - 波兰-1.67MB/s(Youtube:不良林)
-      - 波兰-706.9KB/s(Youtube:不良林)
-      - 波兰-1.01MB/s(Youtube:不良林)
-      - 波兰-914.9KB/s(Youtube:不良林)
+      - 保加利亚-324.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-904.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-416.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-610.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 保加利亚-437.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 波兰-160.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-790.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
-      - 波兰-1.82MB/s(Youtube:不良林)
-      - 波兰-1.67MB/s(Youtube:不良林)
-      - 波兰-706.9KB/s(Youtube:不良林)
-      - 波兰-1.01MB/s(Youtube:不良林)
-      - 波兰-914.9KB/s(Youtube:不良林)
+      - 保加利亚-324.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-904.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-416.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-610.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-437.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 波兰-160.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-790.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
-      - 波兰-1.82MB/s(Youtube:不良林)
-      - 波兰-1.67MB/s(Youtube:不良林)
-      - 波兰-706.9KB/s(Youtube:不良林)
-      - 波兰-1.01MB/s(Youtube:不良林)
-      - 波兰-914.9KB/s(Youtube:不良林)
+      - 保加利亚-324.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-904.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-416.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-610.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-437.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 波兰-160.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-790.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
-      - 波兰-1.82MB/s(Youtube:不良林)
-      - 波兰-1.67MB/s(Youtube:不良林)
-      - 波兰-706.9KB/s(Youtube:不良林)
-      - 波兰-1.01MB/s(Youtube:不良林)
-      - 波兰-914.9KB/s(Youtube:不良林)
+      - 保加利亚-324.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-904.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-416.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-610.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
