--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-827.2KB/s(Youtube:不良林), server: 217.30.10.67, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
-  - {name: 🇺🇸 美国-900.0KB/s(Youtube:不良林), server: 38.86.135.36, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-3.60MB/s(Youtube:不良林), server: 38.114.114.19, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: 38.86.135.27, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-1.84MB/s(Youtube:不良林), server: 38.114.114.49, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇳🇱 荷兰-392.8KB/s(Youtube:不良林), server: 213.183.59.229, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇺🇸 美国-3.54MB/s(Youtube:不良林), server: 38.114.114.19, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: 38.86.135.36, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.78MB/s(Youtube:不良林), server: 38.75.136.102, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-790.1KB/s(Youtube:不良林), server: hk22.swty.buzz, port: 12155, type: vmess, uuid: e152429a-8e95-4f53-bb88-e92a62682fcf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk22.swty.buzz}}
   - {name: 🇨🇦 加拿大-1.42MB/s(Youtube:不良林), server: 134.195.198.95, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇨🇦 加拿大-2.25MB/s(Youtube:不良林), server: 134.195.198.95, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇨🇦 加拿大-1.53MB/s(Youtube:不良林), server: 134.195.198.95, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇨🇦 加拿大-1.08MB/s(Youtube:不良林), server: 134.195.198.95, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇦 加拿大-1.26MB/s(Youtube:不良林), server: 134.195.198.95, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.25MB/s(Youtube:不良林), server: 134.195.198.95, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-827.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-900.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-790.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.25MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-827.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-900.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-790.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.25MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-827.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-900.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-790.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.25MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-827.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-900.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-790.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.25MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-827.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-900.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-790.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.25MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-827.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-900.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-790.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.25MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-827.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-900.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-392.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-790.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.25MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
